[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 599.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
margin_left = 412.597
margin_top = 37.8749
margin_right = 557.597
margin_bottom = 77.8749
text = "Connections Simulator"

[node name="SendInvite" type="Button" parent="Control"]
margin_left = 414.3
margin_top = 282.044
margin_right = 558.3
margin_bottom = 320.044
text = "Send Invite"

[node name="ConnectionsT" type="TextEdit" parent="Control"]
margin_left = 27.0
margin_top = 13.0
margin_right = 279.0
margin_bottom = 53.0

[node name="InfluenceT" type="TextEdit" parent="Control"]
margin_left = 28.0
margin_top = 61.0
margin_right = 280.0
margin_bottom = 101.0

[connection signal="button_down" from="Control/SendInvite" to="." method="_on_SendInvite_button_down"]
